Updates from Overleaf

--- a/thesis/paper/sections/1_introduction.tex
+++ b/thesis/paper/sections/1_introduction.tex
@@ -17,14 +17,14 @@ subfigure env
 
 \section{Problem Statement} \label{problemStatement}
 
-In this section, we focus on the hurdles due the increase in the diversity of devices and device families, and increasingly vibrant ecosystem of development tools and techniques. We group these hurdles in two main categories, problems faced by the end-users, and problems faced by developers.
+In this section, we focus on the hurdles due the increase in the diversity of devices and device families, and increasingly vibrant ecosystem of development tools and techniques. We group these hurdles in two main categories, problems faced by the end users, and problems faced by developers.
 
 \subsection{User Problems}
 
 The simplicity of consuming data is lost within the complexity of modern-day applications; nowadays, something as simple as checking the weather, reading a news article, browsing an image gallery, buying a product or service and filling out a form can be frustrating and time-consuming. We have identified the fundamental problems that lead to user experience problems and compromise privacy/security.
 
 \subsubsection{UI/UX Inconsistencies}
-One reason for this is the inconsistencies in front-end implementations. The visual presentation of components with the same functionality can often differ across front-end implementations, often confusing the end-users. Inconsistencies are often seen not only within a platform or cross-platform, but even a single front-end application can have inconsistencies within itself. This can arise from a variety of different reasons ranging from poor design to poor implementation.
+One reason for this is the inconsistencies in front-end implementations. The visual presentation of components with the same functionality can often differ across front-end implementations, often confusing the end users. Inconsistencies are often seen not only within a platform or cross-platform, but even a single front-end application can have inconsistencies within itself. This can arise from a variety of different reasons ranging from poor design to poor implementation.
 
 \subsubsection{Intrusive Advertisement}
 Another common source of frustration for the users is intrusive online advertisement and numerous other attention-grabbing call-to-action popups that diverts users attention from the content they are consuming. A recent study by Yahoo \cite{IntrusiveAds} states that as online advertisement became the primary source of income for most products, it has become increasingly intrusive and annoying even at the cost of hurting the user experience.
@@ -106,7 +106,7 @@ To identify and effectively address all these problems, we utilised the Design S
 
 The first step of DSRM is \textbf{identifying the problem and the motivation}. It is not uncommon for research and inventions to stem from a problem or a necessity. Similarly, in our case, the problem was out there; we only needed to focus on it to better understand the issues we are tackling. In \nameref{problemStatement}, we discussed and justified what problems we are attempting to solve with Intertext. Then we proceeded to the next step, \textbf{defining the objectives for a solution}. As we narrowed down the problems that we attempt to solve in \nameref{problemStatement}, we drafted our objectives to approach this problem. We explained these objectives in detail in \nameref{researchQuestions}. Then, we were ready to take the next step of \textbf{design and development}. In the sections \nameref{solution} and \nameref{implementation}, we explained in detail our development process, all the challenges and design decisions that we have taken in order to address the problems in the best way possible. 
 
-Once we had a working prototype, we created a simple Intertext application, RecipeApp, as explained in detail in \nameref{evaluation} section. This application served as a demonstration for developers on how IUIDL could be dynamically served from a backend. We also introduced Intertext to end-users, communicated its goals and motivations, and then collected feedback. These concludes the final three steps of \textbf{demonstration}, \textbf{evaluation} and \textbf{communication} into one.
+Once we had a working prototype, we created a simple Intertext application, RecipeApp, as explained in detail in \nameref{evaluation} section. This application served as a demonstration for developers on how IUIDL could be dynamically served from a backend. We also introduced Intertext to end users, communicated its goals and motivations, and then collected feedback. These concludes the final three steps of \textbf{demonstration}, \textbf{evaluation} and \textbf{communication} into one.
 
 \section{Structure} \label{structure}
 
