Updates from Overleaf

--- a/thesis/paper/sections/3_solution.tex
+++ b/thesis/paper/sections/3_solution.tex
@@ -73,7 +73,7 @@ Intertext adopts a component-based approach with a set of components that develo
 \begin{figure}
   \centering
   \includegraphics[width=13cm]{thesis/paper/images/buttons.png}
-  \caption{Output of IUIDL at Figure \ref{fig:iuidl_buttons} on Intertext web client}%
+  \caption{Output of IUIDL in Figure \ref{fig:iuidl_buttons} on Intertext web client}%
   \label{fig:iuidl_buttons_output}%
 \end{figure}
 
@@ -406,7 +406,7 @@ In order to protect user privacy, Intertext clients block cross-origin storage r
 \end{lstlisting}
 
 \end{minipage}
-\caption{Template files for multi-step sign up flow at Figure \ref{fig:state_signup_progress_js}}%
+\caption{Template files for multi-step sign up flow in Figure \ref{fig:state_signup_progress_js}}%
 \label{fig:state_signup_progress_xml}%
 \end{figure}
 
